--- a/src/containers/workExperience/WorkExperience.scss
+++ b/src/containers/workExperience/WorkExperience.scss
@@ -2,6 +2,7 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(290px, 1fr));
   gap: 1rem 1rem;
+  align-items: stretch;
 }
 
 .experience-heading {
